# Google-Cloud-Lab

./: .gitignore  README.md  pyproject.toml
api/: train.py
api/api/: main.py
data/: zoo.csv
notebooks/: aiplatform.ipynb  cloudrun.ipynb  predict.ipynb  train.ipynb
sql/: .env.edit  README.md  cloudrun.ipynb  predict.ipynb  pyproject.toml  run.sh  train.ipynb  train.py
sql/api/: connect.py  main.py
